Prevent whitespace text wrapping on description lists

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -14,6 +14,10 @@ body {
   @apply bg-zinc-900 text-white;
 }
 
+dd, dl {
+  white-space: nowrap;
+}
+
 
 dl {
   margin: 0;
